# nextcloud-sync

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: auth.py  config.py  crypto.py  database.py  main.py  models.py
backend/routers/: accounts.py  auth.py  browse.py  jobs.py  rules.py
backend/schemas/: accounts.py  auth.py  browse.py  jobs.py  rules.py
backend/sync/: engine.py  scheduler.py  webdav.py
concept/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: style.css
frontend/src/api/: accounts.js  auth.js  browse.js  client.js  jobs.js  rules.js
frontend/src/components/: AppLayout.vue  ConfirmModal.vue  FolderTree.vue  StatusBadge.vue  SubfolderPicker.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  connectivity.js
frontend/src/views/: AccountsView.vue  DashboardView.vue  HistoryView.vue  LoginView.vue  RuleEditorView.vue  RulesView.vue  SetupView.vue
