[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "next-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "cryptography>=42",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "apscheduler>=3.10",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
]

[project.scripts]
next-sync = "backend.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
